@@ -47,34 +47,6 @@
 #include "logger.h"
 #include "socket.h"
 
-static char *cleanmetas (const char *cstr)
-{
-  /* The largest single element we can have is 256 bytes according to the RFC,
-     so this buffer size should be safe even if it's all ' */
-  static char buffer[1024]; 
-  char *b = buffer;
-
-  memset (buffer, 0, sizeof (buffer));
-  if (cstr == NULL || strlen (cstr) == 0)
-      return b;
-
-  do
-    if (*cstr == 39)
-      {
-	*b++ = '\'';
-	*b++ = '\\';
-	*b++ = '\'';
-	*b++ = '\'';
-      }
-    else
-      *b++ = *cstr;
-  while (*cstr++);
-
-  *b++ = 0;
-  b = buffer;
-
-  return b;
-}
 
 /* IMPORTANT: Ensure that the last parameter is NULL when calling */
 static int exec_cmd (const char *cmd, const char *args, ...)
@@ -105,7 +77,7 @@ static int exec_cmd (const char *cmd, const char *args, ...)
 
   if ((pid = fork ()) == 0)
     {
-      if (execve (cmd, argv, NULL) && errno != ENOENT)
+      if (execv (cmd, argv) && errno != ENOENT)
 	logger (LOG_ERR, "error executing \"%s\": %s",
 		cmd, strerror (errno));
       exit (0);
@@ -121,8 +93,13 @@ static void exec_script (const char *script, const char *infofile,
 {
   struct stat buf;
 
+#ifdef ENABLE_INFO
   if (! script || ! infofile || ! arg)
     return;
+#else
+  if (! script || ! arg)
+    return ;
+#endif
 
   if (stat (script, &buf) < 0)
     {
@@ -131,8 +108,13 @@ static void exec_script (const char *script, const char *infofile,
       return;
     }
 
+#ifdef ENABLE_INFO
   logger (LOG_DEBUG, "exec \"%s %s %s\"", script, infofile, arg);
   exec_cmd (script, infofile, arg, NULL);
+#else
+  logger (LOG_DEBUG, "exec \"%s \"\" %s\"", script, infofile, arg);
+  exec_cmd (script, infofile, "", arg, NULL);
+#endif
 }
 
 static int make_resolv (const char *ifname, const dhcp_t *dhcp)
@@ -142,6 +124,7 @@ static int make_resolv (const char *ifname, const dhcp_t *dhcp)
   char resolvconf[PATH_MAX] = {0};
   address_t *address;
 
+#ifdef RESOLVCONF
   if (stat (RESOLVCONF, &buf) == 0)
     {
       logger (LOG_DEBUG, "sending DNS information to resolvconf");
@@ -152,6 +135,7 @@ static int make_resolv (const char *ifname, const dhcp_t *dhcp)
 	logger (LOG_ERR, "popen: %s", strerror (errno));
     }
   else
+#endif
     {
       logger (LOG_DEBUG, "writing "RESOLVFILE);
       if (! (f = fopen(RESOLVFILE, "w")))
@@ -185,6 +169,7 @@ static int make_resolv (const char *ifname, const dhcp_t *dhcp)
 
 static void restore_resolv(const char *ifname)
 {
+#ifdef RESOLVCONF
   struct stat buf;
 
   if (stat (RESOLVCONF, &buf) < 0)
@@ -192,9 +177,11 @@ static void restore_resolv(const char *ifname)
 
   logger (LOG_DEBUG, "removing information from resolvconf");
   exec_cmd (RESOLVCONF, "-d", ifname, NULL);
+#endif
 }
 
-static int make_ntp (const char *ifname, const dhcp_t *dhcp)
+#ifdef ENABLE_NTP
+static int _make_ntp (const char *file, const char *ifname, const dhcp_t *dhcp)
 {
   FILE *f;
   address_t *address;
@@ -202,17 +189,18 @@ static int make_ntp (const char *ifname, const dhcp_t *dhcp)
   char buffer[1024];
   int tomatch = 0;
   char *token;
+  bool ntp = false;
 
   for (address = dhcp->ntpservers; address; address = address->next)
     tomatch++;
 
   /* Check that we really need to update the servers
      We do this because ntp has to be restarted to work with a changed config */
-  if (! (f = fopen(NTPFILE, "r")))
+  if (! (f = fopen (file, "r")))
     {
       if (errno != ENOENT)
 	{
-	  logger (LOG_ERR, "fopen `%s': %s", NTPFILE, strerror (errno));
+	  logger (LOG_ERR, "fopen `%s': %s", file, strerror (errno));
 	  return -1;
 	}
     }
@@ -244,36 +232,85 @@ static int make_ntp (const char *ifname, const dhcp_t *dhcp)
       /* File has the same name servers that we do, so no need to restart ntp */
       if (tomatch == 0)
 	{
-	  logger (LOG_DEBUG, "ntp already configured, skipping");
+	  logger (LOG_DEBUG, "%s already configured, skipping", file);
 	  return 0;
 	}
     }
 
-  logger (LOG_DEBUG, "writing "NTPFILE);
-  if (! (f = fopen(NTPFILE, "w")))
+  logger (LOG_DEBUG, "writing %s", file);
+  if (! (f = fopen (file, "w")))
     {
-      logger (LOG_ERR, "fopen `%s': %s", NTPFILE, strerror (errno));
+      logger (LOG_ERR, "fopen `%s': %s", file, strerror (errno));
       return -1;
     }
 
   fprintf (f, "# Generated by dhcpcd for interface %s\n", ifname);
-  fprintf (f, "restrict default noquery notrust nomodify\n");
-  fprintf (f, "restrict 127.0.0.1\n");
+#ifdef NTPFILE
+  if (strcmp (file, NTPFILE) == 0)
+    {
+      ntp = true;
+      fprintf (f, "restrict default noquery notrust nomodify\n");
+      fprintf (f, "restrict 127.0.0.1\n");
+    }
+#endif
 
   for (address = dhcp->ntpservers; address; address = address->next)
     {
       a = inet_ntoa (address->address);
-      fprintf (f, "restrict %s nomodify notrap noquery\nserver %s\n", a, a);
+      if (ntp)
+	fprintf (f, "restrict %s nomodify notrap noquery\n", a);
+      fprintf (f, "server %s\n", a);
     }
 
-  fprintf (f, "driftfile " NTPDRIFTFILE "\n");
-  fprintf (f, "logfile " NTPLOGFILE "\n");
+  if (ntp)
+    {
+      fprintf (f, "driftfile " NTPDRIFTFILE "\n");
+      fprintf (f, "logfile " NTPLOGFILE "\n");
+    }
   fclose (f);
 
-  exec_cmd (NTPSERVICE, NTPRESTARTARGS, NULL);
-  return 0;
+  return 1;
 }
 
+static int make_ntp (const char *ifname, const dhcp_t *dhcp)
+{
+  /* On some systems we have only have one ntp service, but we don't know
+     which configuration file we're using. So we need to write to both and
+     restart accordingly. */
+
+  bool restart_ntp = false;
+  bool restart_openntp = false;
+  int retval = 0;
+
+#ifdef NTPFILE
+  if (_make_ntp (NTPFILE, ifname, dhcp) > 0)
+    restart_ntp = true;
+#endif
+
+#ifdef OPENNTPFILE
+  if (_make_ntp (OPENNTPFILE, ifname, dhcp) > 0)
+    restart_openntp = true;
+#endif
+
+#ifdef NTPSERVICE
+  if (restart_ntp)
+    retval += exec_cmd (NTPSERVICE, NTPRESTARTARGS, NULL);
+#endif
+
+#if defined (NTPSERVICE) && defined (OPENNTPSERVICE)
+  if (restart_openntp &&
+      (strcmp (NTPSERVICE, OPENNTPSERVICE) != 0 || ! restart_ntp))
+    retval += exec_cmd (OPENNTPSERVICE, OPENNTPRESTARTARGS, NULL);
+#elif defined (OPENNTPSERVICE) && ! defined (NTPSERVICE)
+  if (restart_openntp) 
+    retval += exec_cmd (OPENNTPSERVICE, OPENNTPRESTARTARGS, NULL);
+#endif
+
+  return retval;
+}
+#endif
+
+#ifdef ENABLE_NIS
 static int make_nis (const char *ifname, const dhcp_t *dhcp)
 {
   FILE *f;
@@ -307,6 +344,37 @@ static int make_nis (const char *ifname, const dhcp_t *dhcp)
 
   exec_cmd (NISSERVICE, NISRESTARTARGS, NULL);
   return 0;
+}
+#endif
+
+#ifdef ENABLE_INFO
+static char *cleanmetas (const char *cstr)
+{
+  /* The largest single element we can have is 256 bytes according to the RFC,
+     so this buffer size should be safe even if it's all ' */
+  static char buffer[1024]; 
+  char *b = buffer;
+
+  memset (buffer, 0, sizeof (buffer));
+  if (cstr == NULL || strlen (cstr) == 0)
+      return b;
+
+  do
+    if (*cstr == 39)
+      {
+	*b++ = '\'';
+	*b++ = '\\';
+	*b++ = '\'';
+	*b++ = '\'';
+      }
+    else
+      *b++ = *cstr;
+  while (*cstr++);
+
+  *b++ = 0;
+  b = buffer;
+
+  return b;
 }
 
 static int write_info(const interface_t *iface, const dhcp_t *dhcp,
@@ -417,6 +485,7 @@ static int write_info(const interface_t *iface, const dhcp_t *dhcp,
   fclose (f);
   return 0;
 }
+#endif
 
 int configure (const options_t *options, interface_t *iface,
 	       const dhcp_t *dhcp)
@@ -567,11 +636,15 @@ int configure (const options_t *options, interface_t *iface,
   else
     logger (LOG_DEBUG, "no dns information to write");
 
+#ifdef ENABLE_NTP
   if (options->dontp && dhcp->ntpservers)
     make_ntp(iface->name, dhcp);
+#endif
 
+#ifdef ENABLE_NIS
   if (options->donis && (dhcp->nisservers || dhcp->nisdomain))
     make_nis(iface->name, dhcp);
+#endif
 
   /* Now we have made a resolv.conf we can obtain a hostname if we need one */
   if (options->dohostname && ! dhcp->hostname)
@@ -606,7 +679,9 @@ int configure (const options_t *options, interface_t *iface,
 	}
     }
 
+#ifdef ENABLE_INFO
   write_info (iface, dhcp, options);
+#endif
 
   if (iface->previous_address.s_addr != dhcp->address.s_addr ||
       iface->previous_netmask.s_addr != dhcp->netmask.s_addr)
